<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_290sdp"
            android:background="@color/menu_color"
            android:radius="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="@dimen/_285sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHome"
            app:layout_constraintVertical_bias="0.105" />

        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="@dimen/_285sdp"
            android:layout_height="@dimen/_137sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_icon" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:background="@drawable/button_main"
            android:drawableLeft="@drawable/ic_calendar_icon"
            android:gravity="center|center_vertical"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_54sdp"
            android:paddingEnd="@dimen/_54sdp"
            android:text="@string/button_home"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
            tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

        <Button
            android:id="@+id/button_lk"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:background="@drawable/button_main"
            android:drawableLeft="@drawable/ic_id_icon"
            android:gravity="center|center_vertical"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_46sdp"
            android:paddingEnd="@dimen/_29sdp"
            android:text="@string/button_home_lk"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />


        <Button
            android:id="@+id/button_3d"
            android:layout_width="@dimen/_109sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_123sdp"
            android:background="@drawable/button_main_id"
            android:drawableLeft="@drawable/ic__3d_rotation_90214"
            android:gravity="center|center_vertical"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_21sdp"
            android:text="@string/button_home_3d"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_lk"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/button_call"
            android:layout_width="@dimen/_109sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_123sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:background="@drawable/button_main_id"
            android:drawableLeft="@drawable/ic_call_icon"
            android:gravity="center|center_vertical"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/button_call"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_lk"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/text_home_down_1"
            android:layout_width="@dimen/_229sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_66sdp"
            android:layout_marginEnd="@dimen/_44sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:text="@string/home_down_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_lk"
            app:layout_constraintVertical_bias="0.423" />

        <TextView
            android:id="@+id/text_home_down"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_44sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:text="@string/home_down_text_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home_down_1"
            app:layout_constraintVertical_bias="0.586" />

        <TextView
            android:id="@+id/text_home_down_2"
            android:layout_width="@dimen/_39sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_44sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:text="@string/home_down_text_2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_home_down"
            app:layout_constraintTop_toBottomOf="@+id/text_home_down_1"
            app:layout_constraintVertical_bias="0.586" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>